--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,12 @@
 streamlit
 langchain
 openai
+python-dotenv
+PyPDF2
+langchain
+langchain-google-genai
 langchain-community
+faiss-cpu
+sentence-transformers
+langchain
+streamlit
