--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,8 @@ openai
 python-dotenv
 langchain-google-genai
 langchain-community
-faiss-cpu
+faiss-cpu==1.7.4
 sentence-transformers
 tqdm
-numpy
+numpy==1.24.4
 tenacity
